fix javantea flickering issue

--- a/client/src/app/components/layout/calibrate-components/calibrate-page/calibrate-page.component.scss
+++ b/client/src/app/components/layout/calibrate-components/calibrate-page/calibrate-page.component.scss
@@ -5,6 +5,10 @@
     margin: 0 10px;
 }
 
+.detection-panel-item {
+    min-width: 200px;
+}
+
 @media screen and (max-width: 1000px) {
     .root {
         display: grid;
